@@ -147,58 +147,56 @@ module.exports = ( spectools ) => {
                 } );
             } );
 
-            if ( !info._import_use ) {
-                as.add( ( as ) => {
-                    // 1. Use each imported interface only once
-                    // 2. Merge compatible interface versions
-                    const import_candidates = {};
+            as.add( ( as ) => {
+                // 1. Use each imported interface only once
+                // 2. Merge compatible interface versions
+                const import_candidates = {};
 
-                    for ( let i = all_imports.length - 1; i >= 0; --i ) {
-                        const imp_ifacever = all_imports[i];
-                        const m = imp_ifacever.match( IFACE_RE );
-                        const iface = m[ _ifacever_pattern_name ];
-                        const ver = m[ _ifacever_pattern_ver ];
-                        let curr_ver = import_candidates[iface];
+                for ( let i = all_imports.length - 1; i >= 0; --i ) {
+                    const imp_ifacever = all_imports[i];
+                    const m = imp_ifacever.match( IFACE_RE );
+                    const iface = m[ _ifacever_pattern_name ];
+                    const ver = m[ _ifacever_pattern_ver ];
+                    let curr_ver = import_candidates[iface];
 
-                        if ( curr_ver ) {
-                            curr_ver = curr_ver.split( '.' );
-                            const new_ver = ver.split( '.' );
+                    if ( curr_ver ) {
+                        curr_ver = curr_ver.split( '.' );
+                        const new_ver = ver.split( '.' );
 
-                            if ( curr_ver[0] !== new_ver[0] ) {
-                                as.error( InvokerError,
-                                    "Incompatible iface versions: " +
-                                          iface + " " +
-                                          ver + "/" + import_candidates[iface] );
-                            }
+                        if ( curr_ver[0] !== new_ver[0] ) {
+                            as.error( InvokerError,
+                                "Incompatible iface versions: " +
+                                        iface + " " +
+                                        ver + "/" + import_candidates[iface] );
+                        }
 
-                            if ( parseInt( curr_ver[1] ) < parseInt( new_ver[1] ) ) {
-                                import_candidates[iface] = ver;
-                            }
-                        } else {
+                        if ( parseInt( curr_ver[1] ) < parseInt( new_ver[1] ) ) {
                             import_candidates[iface] = ver;
                         }
+                    } else {
+                        import_candidates[iface] = ver;
                     }
+                }
 
-                    const imports = info.imports = [];
+                const imports = info.imports = [];
 
-                    as.forEach( import_candidates, ( as, iface, version ) => {
-                        imports.push( iface + ':' + version );
+                as.forEach( import_candidates, ( as, iface, version ) => {
+                    imports.push( iface + ':' + version );
 
-                        const imp_info = {
-                            iface,
-                            version,
-                            _import_use : true,
-                        };
-                        loadIface( as, imp_info, specdirs, imp_load_cache );
+                    const imp_info = {
+                        iface,
+                        version,
+                        _import_use : true,
+                    };
+                    loadIface( as, imp_info, specdirs, imp_load_cache );
 
+                    if ( !info._import_use ) {
                         as.add( ( as ) => {
                             parseImportInherit( as, info, raw_spec, imp_info );
                         } );
-                    } );
+                    }
                 } );
-            } else {
-                info.imports = all_imports;
-            }
+            } );
         } else {
             info.imports = [];
         }
