@@ -2,6 +2,7 @@
 === (next) ===
 FIXED: to allow null for parameter value, if set in spec as default
 FIXED: not to check for unknown type in incomplete mixins for import use
+FIXED: to properly work with very deep import chain
 NEW: more verbose error for RegExp compilation issues
 
 === 2.0.2 (2018-06-12) ===
